k8s/istio/10-destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-catalog
spec:
  host: catalog-service.micro-20.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-order
spec:
  host: order-service.micro-20.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-gateway
spec:
  host: api-gateway.micro-20.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-frontend
spec:
  host: frontend.micro-20.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
