k8s/istio/30-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: micro-vs
spec:
  hosts:
    - "micro.local"
  gateways:
    - micro-gateway
  http:
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: api-gateway
            port:
              number: 8081
    - match:
        - uri:
            exact: "/health"
      route:
        - destination:
            host: api-gateway
            port:
              number: 8081
    - route:
        - destination:
            host: frontend
            port:
              number: 80
